Not aligned text fix

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="container" style="width: 150px; height: 150px;">
+    <div class="container" style="width: 150px; height: 150px; text-align: center;">
         <img style="width: 80%; height: 80%;" id="naranjito" src="naranjito.png" alt="I'll take care of everything" />
         <div>
             <h3>Sit back and relax, I'll take care of everything. <br>Enjoy your retinas.</h3>
